--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Welcome To This Website!</h1>
         <h2>Check out the "informational articles" on this website!</h2>
         <h2>Don't forget to like and subscribe!</h2>
-        <a href="./about.html"><h2>Click Here To Learn More!</h2></a>
+        <a href="./about"><h2>Click Here To Learn More!</h2></a>
     </div>
 </body>
 </html>
